force-app/main/default/objects/PrazoMedio__c/PrazoMedio__c.object-meta.xml
<CustomObject>
    <label>Prazo Médio</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prazos Medio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>