force-app/main/default/objects/PrazoMedio__c/fields/DailyInvoice__c.field-meta.xml
<CustomField>
    <fullName>DailyInvoice__c</fullName>
    <label>Juros Diarios</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>