force-app/main/default/objects/PrazoMedio__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Final</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>