force-app/main/default/objects/PrazoMedio__c/fields/Intervalo__c.field-meta.xml
<CustomField>
    <fullName>Intervalo__c</fullName>
    <label>Intervalo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>