force-app/main/default/objects/PrazoMedio__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inicio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>